--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
             <div class="section contact">
                 <div class="section-label">Contact</div>
                 <div class="section-content">
-                    <a href="www.linkedin.com/in/bhanu-kiran-b501a61b8"><p> Click get in touch for collaborations, interesting projects, or just to say hello!</p></a>
+                    <a href="https://linkedin.com/in/bhanu-kiran-b501a61b8"><p> Click get in touch for collaborations, interesting projects, or just to say hello!</p></a>
                 </div>
             </div>
         </div>
